# GoatProject

./: .gitignore  ARCHITECTURE.md  MATHS.md  README.md  bootstrap.sh  checkpoint.yaml  open.sh  pyproject.toml  run.sh
config/: alchemy.yaml  allowlist.yaml  features.yaml  labels.yaml  paths.yaml  pipeline.yaml  playoffs.yaml  scoring.yaml  scoring_zones.yaml  showman.yaml  viz.yaml
data/: finals_results.csv
output/: alchemy_cache.json  embed_3d.html  goat_rankings.csv  home.html  how_it_works.html  index.html  pca_coordinates.csv  pca_explained_variance.json  pca_loadings.csv  pca_map.html  sensitivity_report.json  similarity_matrix.csv  uniqueness.csv  validation_report.json
plans/: architecture-blueprint.md  domain-decisions.md  goat-alchemy-vector-mode.md  goat-nba-ranking-system.md  rfc-alchemy-v2.md  swarm-board.md
plans/handoffs/: unit-001.md  unit-002.md  unit-003a.md  unit-003b.md  unit-004.md
processed/: README.md  career_vectors.parquet  league_career_covariance.npy  manifest.json  playoff_context.parquet  season_labels.parquet  season_vectors.parquet
scripts/: picker_js_snippet.txt  refresh_checkpoint.sh  verify_checkpoint.py
src/goat_data/: __init__.py  aggregate.py  config.py  covariance.py  era_adjust.py  excitement.py  labels.py  load.py  players.py  playoffs.py  run_pipeline.py  shooting_zones.py
src/goat_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/goat_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_alchemy_features.py  test_analysis.py  test_combine.py  test_excitement.py  test_pipeline.py  test_ranking.py  test_repeat_titles.py  test_shooting_zones.py  test_validation.py  test_vector_space.py  test_viz.py
(+30 files in other folders)
