[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goat-model"
version = "0.1.0"
description = "Modeling package for NBA GOAT ranking step 2"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "PyYAML",
  "xgboost",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
explain = [
  "shap",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
