[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goat-viz"
version = "0.1.0"
description = "Visualization renderer for the NBA GOAT stat-space index."
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "seaborn>=0.13",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
